[tool.poetry]
name = "cthulhu_cmd"
version = "0.1.0"
description = "Command line tool that provides commands usefull in the context of the pen and paper game Cthulhu"
authors = ["Tim Lucas Sabelmann"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
cthulhu = "cthulhu_cmd.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
